them model, sua logic
